@@ -2,17 +2,16 @@ package com.sparta.todo.todo.service;
 
 
 import com.sparta.todo.jwt.JwtUtil;
+import com.sparta.todo.todo.dto.CreateTodoResponseDto;
 import com.sparta.todo.todo.dto.GetTodoListResponseDto;
 import com.sparta.todo.todo.dto.GetTodoResponseDto;
 import com.sparta.todo.todo.dto.TodoRequestDto;
-import com.sparta.todo.todo.dto.CreateTodoResponseDto;
 import com.sparta.todo.todo.entity.Todo;
 import com.sparta.todo.todo.repository.TodoRepository;
 import com.sparta.todo.user.entity.User;
 import com.sparta.todo.user.repository.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -40,14 +39,31 @@ public class TodoService {
         return new GetTodoResponseDto(todo);
     }
 
+    public List<GetTodoListResponseDto> getTodos(String title) {
+        List<User> users = userRepository.findAll();
+        List<GetTodoListResponseDto> todoList = users.stream().map(GetTodoListResponseDto::new).toList();
+
+        if(title==null){
+            return todoList;
+        }
+        return getTodosByTitle(todoList, title);
+    }
+
+
     private Todo findTodo(Long id) {
         return todoRepository.findById(id).orElseThrow(() ->
             new EntityNotFoundException("선택한 일정은 존재하지 않습니다.")
         );
     }
 
-    public List<GetTodoListResponseDto> getTodos() {
-        List<User> users = userRepository.findAll();
-        return users.stream().map(GetTodoListResponseDto::new).collect(Collectors.toList());
+    private List<GetTodoListResponseDto> getTodosByTitle(List<GetTodoListResponseDto> todoList, String title) {
+        return todoList.stream()
+            .map(todos -> {
+                List<GetTodoResponseDto> filteredTodos = todos.getTodos().stream()
+                    .filter(todo -> todo.getTitle().equals(title))
+                    .toList();
+                return new GetTodoListResponseDto(todos.getAuthor(), filteredTodos);
+            })
+            .toList();
     }
 }
